Bug 1442887 - Align the #clearDataSettings button in about:preferences to the very right. r=jaws
MozReview-Commit-ID: ketCjIIUl0

UltraBlame original commit: 70343258ed74a10d9810774e92f5fe2b9c0918be

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -1835,6 +1835,28 @@ top
 ;
 }
 #
+historyButtons
+{
+display
+:
+flex
+;
+flex
+-
+direction
+:
+column
+;
+justify
+-
+content
+:
+space
+-
+between
+;
+}
+#
 acceptCookies
 {
 margin
